tests/baselines/reference/unusedVariablesinModules1.errors.txt
tests/cases/compiler/unusedVariablesinModules1.ts(3,5): error TS6133: 'x' is declared but never used.


==== tests/cases/compiler/unusedVariablesinModules1.ts (1 errors) ====
    export {};
    
    var x: string;
        ~
!!! error TS6133: 'x' is declared but never used.
    
    export var y: string;